# churlos

./: .gitignore  CMakeLists.txt  README.md  build.sh  flake.nix  run.sh
cmake/: CMakeLists.txt
cmake/bootdisk/: CMakeLists.txt
cmake/device/: CMakeLists.txt
cmake/device/bios/: CMakeLists.txt
cmake/device/cpu/: CMakeLists.txt
cmake/device/graphics/: CMakeLists.txt
cmake/device/hid/: CMakeLists.txt
cmake/device/interrupt/: CMakeLists.txt
cmake/device/port/: CMakeLists.txt
cmake/device/sound/: CMakeLists.txt
cmake/device/time/: CMakeLists.txt
cmake/kernel/: CMakeLists.txt
cmake/kernel/demo/: CMakeLists.txt
cmake/kernel/event/: CMakeLists.txt
cmake/kernel/exception/: CMakeLists.txt
cmake/kernel/interrupt/: CMakeLists.txt
cmake/kernel/log/: CMakeLists.txt
cmake/kernel/memory/: CMakeLists.txt
cmake/kernel/process/: CMakeLists.txt
cmake/kernel/service/: CMakeLists.txt
cmake/kernel/system/: CMakeLists.txt
cmake/lib/: CMakeLists.txt
cmake/lib/async/: CMakeLists.txt
cmake/lib/demo/: CMakeLists.txt
cmake/lib/graphics/: CMakeLists.txt
cmake/lib/mem/: CMakeLists.txt
cmake/lib/memory/: CMakeLists.txt
cmake/lib/stream/: CMakeLists.txt
cmake/lib/string/: CMakeLists.txt
cmake/lib/util/: CMakeLists.txt
cmake/system/: CMakeLists.txt
src/: link.ld  main.cc
src/bootdisk/: build.c
src/device/bios/: BIOS.cc  BIOS.h
src/device/cpu/: CPU.h
src/device/graphics/: CGA.cc  CGA.h  CGA_Stream.cc  CGA_Stream.h  Font_8x16.h  Font_8x8.h  Font_acorn_8x8.h  Font_pearl_8x8.h  Font_sun_12x22.h  Font_sun_8x16.h  Fonts.cc  Fonts.h  LFBgraphics.cc  LFBgraphics.h  VESA.cc  VESA.h
src/device/hid/: Key.h  Keyboard.cc  Keyboard.h
src/device/interrupt/: PIC.cc  PIC.h
src/device/port/: IOport.h  SerialOut.cc  SerialOut.h
src/device/sound/: PCSPK.cc  PCSPK.h
src/device/time/: PIT.cc  PIT.h
src/kernel/demo/: ArrayDemo.cc  ArrayDemo.h  HeapDemo.cc  HeapDemo.h  KeyboardDemo.cc  KeyboardDemo.h  MainMenu.cc  MainMenu.h  PCSPKdemo.cc  PCSPKdemo.h  PagingDemo.cc  PagingDemo.h  PreemptiveThreadDemo.cc  PreemptiveThreadDemo.h  SmartPointerDemo.cc  SmartPointerDemo.h  StringDemo.cc  StringDemo.h  TextDemo.cc  TextDemo.h  VBEdemo.cc  VBEdemo.h  VectorDemo.cc  VectorDemo.h
src/kernel/event/: KeyEventListener.cc  KeyEventListener.h  KeyEventManager.cc  KeyEventManager.h
src/kernel/exception/: Bluescreen.cc  Bluescreen.h
src/kernel/interrupt/: Bluescreen.cc  Bluescreen.h  ISR.h  IntDispatcher.cc  IntDispatcher.h  interrupt_asm.cpp
src/kernel/log/: Logger.cc  Logger.h
src/kernel/memory/: Allocator.cc  Allocator.h  BumpAllocator.cc  BumpAllocator.h  LinkedListAllocator.cc  LinkedListAllocator.h  Paging.cc  Paging.h  TreeAllocator.cc  TreeAllocator.h  TreeAllocatorOperations.cc
src/kernel/process/: IdleThread.h  Scheduler.cc  Scheduler.h  Thread.asm  Thread.cc  Thread.h  thread_asm.cpp
src/kernel/service/: EventService.cpp  EventService.h  InterruptService.cpp  InterruptService.h  MemoryService.cpp  MemoryService.h  SchedulerService.cpp  SchedulerService.h  Service.h  TimeService.h
src/kernel/system/: Globals.cc  Globals.h  System.cpp  System.h
src/lib/async/: Semaphore.cc  Semaphore.h  SpinLock.cc  SpinLock.h
src/lib/container/: Array.h  Iterator.h  Span.h  Vector.h
src/lib/demo/: ArrayDemo.cc  ArrayDemo.h  HeapDemo.cc  HeapDemo.h  KeyboardDemo.cc  KeyboardDemo.h  (+19 more)
(+33 files in other folders)
